--- a/php/includes/about-me.html
+++ b/php/includes/about-me.html
@@ -1,67 +1,132 @@
-<section class="section">
+<!DOCTYPE html>
+<html lang="fr">
 
-    <h1>A propos de moi</h1>
-    <div class="hard-skills">
-        <h2>Mes compétences opérationnelles</h2>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Javascript</li>
-            <li>PHP</li>
-            <li>GIT (GitLab / GitHub)</li>
-        </ul>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>A propos de moi</title>
+    <link rel="stylesheet" href="../css/about-me.css">
+</head>
+
+<body>
+    <!--HEDAER-->
+    <header>
+        <strong class="job">
+            <p>Développeuse web et web mobile</p>
+        </strong>
+        <div class="des">
+            <p>Etudiante en dev web, passionée d'informatique et jeux vidéos depuis toujours</p>
+            <p>Je vous en fait découvrir plus sur moi à travers mon "about me"
+                <img src="images/down.gif" alt="down-arrow">
+            </p>
+        </div>
+    </header>
+
+    <!--NAV-->
+    <div class="nav-barre">
+        <nav>
+            <div class="logo">
+                <img src="images/hinata.png" alt="hinata-logo">
+            </div>
+
+            <div class="logo-2">
+                <img src="images/tsunade.png" alt="tsunade-logo">
+            </div>
+
+            <ul class="menu">
+                <li><a href="/">Accueil</a></li>
+                <li><a href="/?sana=1">A propos de moi</a></li>
+                <li><a href="/?sana=2">Mes rêves d'apprenant</a></li>
+                <li><a href="/?sana=3">Mes passions</a></li>
+                <li><a href="#" target="_blank">Mon CV</a></li>
+            </ul>
+        </nav>
     </div>
 
-    <div class="soft-skills">
-        <h2>Mes compétences comportementales</h2>
-        <ul>
-            <li>Autonomie / esprit d'initiative</li>
-            <li>Travail d'équipe</li>
-            <li>Rigueur</li>
-        </ul>
-    </div>
 
-    <div class="skills">
-        <h2>Mes connaissances</h2>
-        <table>
-            <tr>
-                <th>Connaissances</th>
-                <th>Acquis</th>
-            </tr>
-            <tr>
-                <td>HTML5</td>
-                <td>X</td>
-            </tr>
-            <tr>
-                <td>CSS3</td>
-                <td>X</td>
-            </tr>
-            <tr>
-                <td>PHP</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>MySQL</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>JS</td>
-                <td>X</td>
-            </tr>
-            <tr>
-                <td>PHP Objet</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>Java</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>Python</td>
-                <td></td>
-            </tr>
-        </table>
 
-    </div>
+    <!--SECTION-->
 
-</section>
+    <section class="section">
+
+        <h1>A propos de moi</h1>
+        <div class="hard-skills">
+            <h2>Mes compétences opérationnelles</h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+                <li>PHP</li>
+                <li>GIT (GitLab / GitHub)</li>
+            </ul>
+        </div>
+
+        <div class="soft-skills">
+            <h2>Mes compétences comportementales</h2>
+            <ul>
+                <li>Autonomie / esprit d'initiative</li>
+                <li>Travail d'équipe</li>
+                <li>Rigueur</li>
+            </ul>
+        </div>
+
+        <div class="skills">
+            <h2>Mes connaissances</h2>
+            <table>
+                <tr>
+                    <th>Connaissances</th>
+                    <th>Acquis</th>
+                </tr>
+                <tr>
+                    <td>HTML5</td>
+                    <td>X</td>
+                </tr>
+                <tr>
+                    <td>CSS3</td>
+                    <td>X</td>
+                </tr>
+                <tr>
+                    <td>PHP</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>MySQL</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>JS</td>
+                    <td>X</td>
+                </tr>
+                <tr>
+                    <td>PHP Objet</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Java</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Python</td>
+                    <td></td>
+                </tr>
+            </table>
+
+        </div>
+
+    </section>
+
+    <footer>
+        <div class="media">
+            <img src="images/copyright.png" alt="copyright">
+            <a href="https://github.com/SanaSanss" target="_blank"><img src="images/github.png" alt="github"></a>
+            <a href="https://www.linkedin.com/in/fouzia-asloum-26158119b/" target="_blank"></a><img
+                src="images/linkedin.png" alt="linkedin">
+            <a href="https://www.instagram.com/monkey_d_robine/" target="_blank"></a><img src="images/instagram.png"
+                alt="instagram">
+        </div>
+    </footer>
+
+</body>
+
+</html>
