--- a/php/includes/index.html
+++ b/php/includes/index.html
@@ -1,25 +1,87 @@
-<section class="index">
+<!DOCTYPE html>
+<html lang="fr">
 
-    <h1>Mon profil</h1>
-    <div class="pic">
-        <a href="images/yamato-pp.jpg" target="_blank"><img src="images/yamato-mini.jpg" alt="pp-yamato"></a>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Index</title>
+    <link rel="stylesheet" href="../css/style.css">
+</head>
+
+<body>
+             <!--HEDAER-->
+    <header>
+        <strong class="job">
+            <p>Développeuse web et web mobile</p>
+        </strong>
+        <div class="des">
+            <p>Etudiante en dev web, passionée d'informatique et jeux vidéos depuis toujours</p>
+            <p>Je vous en fait découvrir plus sur moi à travers mon "about me"
+                <img src="images/down.gif" alt="down-arrow">
+            </p>
+        </div>
+    </header>
+
+             <!--NAV-->
+    <div class="nav-barre">
+        <nav>
+            <div class="logo">
+                <img src="images/hinata.png" alt="hinata-logo">
+            </div>
+
+            <div class="logo-2">
+                <img src="images/tsunade.png" alt="tsunade-logo">
+            </div>
+
+            <ul class="menu">
+                <li><a href="/">Accueil</a></li>
+                <li><a href="/?sana=1">A propos de moi</a></li>
+                <li><a href="/?sana=2">Mes rêves d'apprenant</a></li>
+                <li><a href="/?sana=3">Mes passions</a></li>
+                <li><a href="#" target="_blank">Mon CV</a></li>
+            </ul>
+        </nav>
     </div>
 
-    <div class="name">
-        <p>Asloum Fouzia</p>
-        <p>Asloum Fouzia</p>
-    </div>
 
-    <div class="intro">
-        <p class="p1">Passionée d'informatiques et de jeux vidéos depuis toute jeune mais ayant effectué un bac ES en
-            grandissant,
-            je me suis orientée vers une filière commerciale qui ne m'a finalement pas plue. <br>
-            J'ai alors décidé après 4 ans d'arrêter ce cursus et de me réorienter vers ma passion réelle,
-            l'informatique.
-        </p>
-        <p class="p2">Je suis actuellement en formation en vue d'obtenir un titre de développeuse web et web mobile sur le
-            court terme. <br>
-            Et j'envisage une poursuite d'études afin de devenir ingénieure en robotique sur du moyen terme
-        </p>
-    </div>
-</section>
+             <!--SECTION-->
+
+    <section class="index">
+
+        <h1>Mon profil</h1>
+        <div class="pic">
+            <a href="images/yamato-pp.jpg" target="_blank"><img src="images/yamato-mini.jpg" alt="pp-yamato"></a>
+        </div>
+
+        <div class="name">
+            <p>Asloum Fouzia</p>
+            <p>Asloum Fouzia</p>
+        </div>
+
+        <div class="intro">
+            <p class="p1">Passionée d'informatiques et de jeux vidéos depuis toute jeune mais ayant effectué un bac ES en
+                grandissant,
+                je me suis orientée vers une filière commerciale qui ne m'a finalement pas plue. <br>
+                J'ai alors décidé après 4 ans d'arrêter ce cursus et de me réorienter vers ma passion réelle,
+                l'informatique.
+            </p>
+            <p class="p2">Je suis actuellement en formation en vue d'obtenir un titre de développeuse web et web mobile sur le
+                court terme. <br>
+                Et j'envisage une poursuite d'études afin de devenir ingénieure en robotique sur du moyen terme
+            </p>
+        </div>
+    </section>
+
+    <footer>
+        <div class="media">
+            <img src="images/copyright.png" alt="copyright">
+            <a href="https://github.com/SanaSanss" target="_blank"><img src="images/github.png" alt="github"></a>
+            <a href="https://www.linkedin.com/in/fouzia-asloum-26158119b/" target="_blank"></a><img src="images/linkedin.png" alt="linkedin">
+            <a href="https://www.instagram.com/monkey_d_robine/" target="_blank"></a><img src="images/instagram.png" alt="instagram">
+        </div>
+    </footer>
+
+</body>
+
+</html>
