--- a/php/includes/my-passions.html
+++ b/php/includes/my-passions.html
@@ -1,46 +1,113 @@
-<section class="section">
-    <h1>Mes passions</h1>
-    <div class="passions">
-        <div class="passion">
-            <figure>
-                <a href="images/asie.png" target="_blank">
-                    <img src="images/asie-mini.png" alt="Culture-d'Asie-de-l'Est"></a>
-                <figcaption>
-                    <h2>Culture d'Asie de l'Est <img src="images/maneki.gif" alt="maneki-neko"></h2>
-                    <p>Passionée par l'Histoire et les traditions</p>
-                </figcaption>
-            </figure>
-        </div>
+<!DOCTYPE html>
+<html lang="fr">
 
-        <div class="passion">
-            <figure>
-                <a href="images/voyage.png" target="_blank"> <img src="images/voyage-mini.png" alt="Voyages"></a>
-                <figcaption>
-                    <h2>Voyages <img src="images/plane.gif" alt="plane"></h2>
-                    <p>Je rêve de faire le tour du monde</p>
-                </figcaption>
-            </figure>
-        </div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mes passions</title>
+    <link rel="stylesheet" href="../css/mypassions.css">
+</head>
+</head>
 
-        <div class="passion">
-            <figure>
-                <a href="images/anime.jpg " target="_blank"><img src="images/anime-mini.jpg" alt="animés"></a>
-                <figcaption>
-                    <h2>Animés <img src="images/anime.gif" alt="anime"></h2>
-                    <p>One Piece mon animé préféré</p>
-                </figcaption>
-            </figure>
+<body>
+    <!--HEDAER-->
+    <header>
+        <strong class="job">
+            <p>Développeuse web et web mobile</p>
+        </strong>
+        <div class="des">
+            <p>Etudiante en dev web, passionée d'informatique et jeux vidéos depuis toujours</p>
+            <p>Je vous en fait découvrir plus sur moi à travers mon "about me"
+                <img src="images/down.gif" alt="down-arrow">
+            </p>
         </div>
+    </header>
 
-        <div class="passion">
-            <figure>
-                <a href="images/games.jpg" target="_blank"><img src="images/games-mini.jpg"
-                        alt="jeux-vidéos-informatique"></a>
-                <figcaption>
-                    <h2>Jeux vidéos / Informatique <img src="images/games.gif" alt="games"></h2>
-                    <p>Passionée par les jeux de tir et MMO RPG</p>
-                </figcaption>
-            </figure>
-        </div>
+    <!--NAV-->
+    <div class="nav-barre">
+        <nav>
+            <div class="logo">
+                <img src="images/hinata.png" alt="hinata-logo">
+            </div>
+
+            <div class="logo-2">
+                <img src="images/tsunade.png" alt="tsunade-logo">
+            </div>
+
+            <ul class="menu">
+                <li><a href="/">Accueil</a></li>
+                <li><a href="/?sana=1">A propos de moi</a></li>
+                <li><a href="/?sana=2">Mes rêves d'apprenant</a></li>
+                <li><a href="/?sana=3">Mes passions</a></li>
+                <li><a href="#" target="_blank">Mon CV</a></li>
+            </ul>
+        </nav>
     </div>
-</section>
+
+
+
+    <!--SECTION-->
+
+    <section class="section">
+        <h1>Mes passions</h1>
+        <div class="passions">
+            <div class="passion">
+                <figure>
+                    <a href="images/asie.png" target="_blank">
+                        <img src="images/asie-mini.png" alt="Culture-d'Asie-de-l'Est"></a>
+                    <figcaption>
+                        <h2>Culture d'Asie de l'Est <img src="images/maneki.gif" alt="maneki-neko"></h2>
+                        <p>Passionée par l'Histoire et les traditions</p>
+                    </figcaption>
+                </figure>
+            </div>
+
+            <div class="passion">
+                <figure>
+                    <a href="images/voyage.png" target="_blank"> <img src="images/voyage-mini.png" alt="Voyages"></a>
+                    <figcaption>
+                        <h2>Voyages <img src="images/plane.gif" alt="plane"></h2>
+                        <p>Je rêve de faire le tour du monde</p>
+                    </figcaption>
+                </figure>
+            </div>
+
+            <div class="passion">
+                <figure>
+                    <a href="images/anime.jpg " target="_blank"><img src="images/anime-mini.jpg" alt="animés"></a>
+                    <figcaption>
+                        <h2>Animés <img src="images/anime.gif" alt="anime"></h2>
+                        <p>One Piece mon animé préféré</p>
+                    </figcaption>
+                </figure>
+            </div>
+
+            <div class="passion">
+                <figure>
+                    <a href="images/games.jpg" target="_blank"><img src="images/games-mini.jpg"
+                            alt="jeux-vidéos-informatique"></a>
+                    <figcaption>
+                        <h2>Jeux vidéos / Informatique <img src="images/games.gif" alt="games"></h2>
+                        <p>Passionée par les jeux de tir et MMO RPG</p>
+                    </figcaption>
+                </figure>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="media">
+            <img src="images/copyright.png" alt="copyright">
+            <a href="https://github.com/SanaSanss" target="_blank"><img src="images/github.png" alt="github"></a>
+            <a href="https://www.linkedin.com/in/fouzia-asloum-26158119b/" target="_blank"></a><img
+                src="images/linkedin.png" alt="linkedin">
+            <a href="https://www.instagram.com/monkey_d_robine/" target="_blank"></a><img src="images/instagram.png"
+                alt="instagram">
+        </div>
+    </footer>
+
+
+</body>
+
+</html>
