--- a/php/includes/my-dreams.html
+++ b/php/includes/my-dreams.html
@@ -1,6 +1,53 @@
+<!DOCTYPE html>
+<html lang="fr">
 
-<link rel="stylesheet" href="./css/my-dreams.css">
-    
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mes rêves d'apprenant</title>
+    <link rel="stylesheet" href="../css/mydreams.css">
+</head>
+
+<body>
+             <!--HEDAER-->
+    <header>
+        <strong class="job">
+            <p>Développeuse web et web mobile</p>
+        </strong>
+        <div class="des">
+            <p>Etudiante en dev web, passionée d'informatique et jeux vidéos depuis toujours</p>
+            <p>Je vous en fait découvrir plus sur moi à travers mon "about me"
+                <img src="images/down.gif" alt="down-arrow">
+            </p>
+        </div>
+    </header>
+
+              <!--NAV-->
+    <div class="nav-barre">
+        <nav>
+            <div class="logo">
+                <img src="images/hinata.png" alt="hinata-logo">
+            </div>
+
+            <div class="logo-2">
+                <img src="images/tsunade.png" alt="tsunade-logo">
+            </div>
+
+            <ul class="menu">
+                <<li><a href="/">Accueil</a></li>
+                <li><a href="/?sana=1">A propos de moi</a></li>
+                <li><a href="/?sana=2">Mes rêves d'apprenant</a></li>
+                <li><a href="/?sana=3">Mes passions</a></li>
+                <li><a href="#" target="_blank">Mon CV</a></li>
+            </ul>
+        </nav>
+    </div>
+
+
+
+             <!--SECTION-->
+
     <section class="section">
         <h1>Mes rêves d'apprenant</h1>
 
@@ -33,3 +80,16 @@
             </ul>
         </div>
     </section>
+
+    <footer>
+        <div class="media">
+            <img src="images/copyright.png" alt="copyright">
+            <a href="https://github.com/SanaSanss" target="_blank"><img src="images/github.png" alt="github"></a>
+            <a href="https://www.linkedin.com/in/fouzia-asloum-26158119b/" target="_blank"></a><img src="images/linkedin.png" alt="linkedin">
+            <a href="https://www.instagram.com/monkey_d_robine/" target="_blank"></a><img src="images/instagram.png" alt="instagram">
+        </div>
+    </footer>
+
+</body>
+
+</html>
